--- a/main.css
+++ b/main.css
@@ -9,6 +9,10 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    position: sticky;
+    top: 0;
+    background-color:#fff;
+    z-index: 1;
   }
    
   .header__logo {
@@ -45,7 +49,18 @@ button {
   .about__sun-image {
     width: 100px;
     height: 100px;
+    animation: rotation 10s linear infinite;
+    position: absolute;
   }
+
+@keyframes rotation {
+  0% {
+    transform: rotate(O);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
   .about {
     display: flex;
@@ -182,4 +197,73 @@ footer h3 {
 
 .footer__links a {
   margin-bottom: 15px;
+}
+
+@media (max-width: 1024px) {
+  .about {
+    padding: 115px 20px;
+  }
+
+  .about h1 {
+    font-size: 36px;
+    line-height: 40px;
+  }
+
+  .about__image {
+    width: 280px;
+  }
+
+  .about__sun-image {
+    width: 75px;
+    height: 75px;
+  }
+}
+
+@media (max-width: 720px) {
+  header {
+    padding: 10px;
+}
+
+.header__logo {
+    height: 20px;
+}
+
+header a {
+    margin-right: 10px;
+}
+
+.about {
+    flex-direction: column-reverse;
+    padding: 50px 10px;
+}
+
+.about h1 {
+    font-size: 36px;
+    line-height: 40px;
+}
+
+.about__image {
+    width: 280px;
+}
+
+.about__sun-image {
+    width: 75px;
+    height: 75px;
+}
+
+.form {
+    padding: 50px 10px;
+}
+
+.form h1 {
+    font-size: 36px;
+}
+
+footer {
+    padding: 50px 10px;
+}
+
+.footer__container {
+    flex-direction: column;
+}
 }
