--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Raleway', sans-serif;
     color: #213053;
     margin: 0;
+    min-width: 320px;
   }
    
   header {
@@ -93,6 +94,169 @@ button {
 
   .about__info {
     max-width: 550px;
+  }
+
+  .features {
+    background-color: #fff;
+    padding: 115px 60px;
+  }
+  
+  .cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 50px;
+ }
+
+  .card {
+    padding: 35px 40px 25px 40px;
+    border: 1px solid #D9E4E6;
+    border-radius: 5px;
+    background: #ffffff;
+ }
+
+  .card p {
+    font-size: 16px;
+    line-height:22px;
+    opacity: 0.8;
+ }
+
+  .card__logo {
+     width: 100px;
+     height: 100px;
+     border-radius: 50%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-weight: 700;
+     font-size: 32px;
+     background: #eaeff9;
+ }
+  .card__logo.yellow {
+    color: #ffb406;
+  }
+ 
+  .card__logo.red {
+    color: #ad1714;
+  }
+
+  .card__logo.green {
+    color: #22a030;
+  }
+
+  .features__border {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border: 1px solid #E6EAF4;
+    width: 100%;
+  }
+
+  .features__feedback {
+    display: flex;
+  }
+
+  .features__feedback-left {
+    margin-right: 10px;
+  }
+
+  .features__feedback-left h2 {
+    font-size: 48px;
+  }
+
+  .features__feedback-left p {
+    font-size: 18px;
+    opacity: 0.7;
+    line-height: 26px;
+  }
+
+  .features__feedback-right {
+    display: flex;
+    align-items: center;
+  }
+
+  .features__box {
+    padding: 30px 40px 25px 40px;
+    color: white;
+    border-radius: 25px;
+  }
+
+  .features__box h3 {
+    font-size: 48px;
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+
+  .features__savings-box {
+    background-color: #dc5e26;
+    box-shadow: 0 6px 0 rgb(221 95 38 / 20%);
+    margin-right: 30px;
+  }
+
+  .features__rate-box {
+    background-color: #1D263A;
+    box-shadow: 0 6px 0  rgb(29 38 58 / 20%);
+  }
+
+  .stars {
+    color: #ff7039;
+  }
+
+  .promo {
+    display: flex;
+  }
+
+  .promo__image {
+    background-image: url(img/promo.jpg);
+    flex-shrink: 0;
+    background-size: cover;
+    background-position: center;
+    width: 50%;
+  }
+
+  .promo__right {
+    background: #dd5f26;
+    padding: 160px 60px;
+  }
+
+  .promo__text {
+    background-color: white;
+    padding: 30px 40px;
+    border-radius: 25px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 26px;
+  }
+  
+  .promo__text p::before {
+    content: '';
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #ec6b29;
+    margin-right: 10px;
+  }
+  
+  .promo__text p {
+    opacity: 0.8;
+  }
+  
+  .promo__text button {
+    background-color: #107b1c;
+    margin-top: 20px;
+    font-weight: 600;
+    font-size: 18px;
+    box-shadow: 0 16px 36px rgb(16 122 28 / 30%);
+    padding: 15px 30px;
+  }
+  
+  .promo__button-wrap {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .promo__text button i {
+    font-size: 15px;
+    margin-left: 5px;
   }
 
   .form__container {
@@ -220,7 +384,8 @@ footer h3 {
 }
 
 @media (max-width: 720px) {
-  header {
+ 
+ header {
     padding: 10px;
 }
 
@@ -251,19 +416,62 @@ header a {
     height: 75px;
 }
 
+.features {
+  padding: 50px 10px;
+}
+
+.cards {
+  grid-template-columns: auto;
+}
+
+.features__feedback {
+  flex-direction: column;
+}
+
+.features__feedback-left {
+  margin-right: 0;
+}
+
+.features__feedback-left h2, .features__box h3 {
+font-size: 36px;
+}
+
+.features__feedback-right {
+  flex-direction: column;
+  align-items: initial;
+}
+
+.features__savings-box {
+  margin-right: 0;
+  margin-bottom: 30px;
+}
+
+.promo {
+  flex-direction: column-reverse;
+}
+
+.promo__right {
+  padding: 50px 10px;
+}
+
+.promo__image {
+  width: 100%;
+  height: 500px;
+}
+
 .form {
-    padding: 50px 10px;
+  padding: 50px 10px;
 }
 
 .form h1 {
-    font-size: 36px;
+  font-size: 36px;
 }
 
 footer {
-    padding: 50px 10px;
+  padding: 50px 10px;
 }
 
 .footer__container {
-    flex-direction: column;
+  flex-direction: column;
 }
 }
