--- a/main.css
+++ b/main.css
@@ -10,10 +10,18 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    position: sticky;
+    position: fixed;
     top: 0;
-    background-color:#fff;
+    left: 0;
+    right: 0;
     z-index: 1;
+    background: none;
+    transition: box-shadow, background-color .25s ease;
+  }
+
+  .header__scrolled {
+    background-color: white;
+    box-shadow: 0 12px 34px -11px rgb(65 62 101 / 10%);
   }
    
   .header__logo {
@@ -68,7 +76,7 @@ button {
     align-items: center;
     justify-content: space-around;
     padding-bottom: 115px;
-    padding-top: 115px;
+    padding-top: 200px;
     background: url('img/back.png') no-repeat;
     background-position: center;
     background-size: cover;
